# Library

./: .env_exemple  .gitignore  README.md  docker-compose.yml  requirements.txt  ПРОЧТИ МЕНЯ ТОЖЕ.md  Прочти меня.md
.github/workflows/: django.yml
apps/account/: serializers.py  tasks.py  urls.py
apps/books/: admin.py  choices.py  models.py  serializers.py  views.py
config/: settings.py
server/src/: Dockerfile  conftest.py  dump.rdb  pyproject.toml  requirements.txt
server/src/apps/account/: serializers.py  views.py
server/src/apps/books/: admin.py  apps.py  choices.py  models.py  serializers.py  signals.py  urls.py  views.py
server/src/apps/books/migrations/: 0001_initial.py  0002_rating_bookstate.py  0003_alter_books_cover_alter_books_file_and_more.py  0004_rename_rating_userbookrating_and_more.py  0005_alter_userbookstate_state.py
server/src/apps/comments/: models.py  serializers.py  test_comments_urls.py  urls.py  views.py
server/src/apps/comments/migrations/: 0001_initial.py  0002_alter_comments_options.py
server/src/apps/comments/tests/: factories.py  test_urls.py
server/src/config/: celery.py  settings.py  urls.py
server/src/core/: middleware.py
server/src/services/: drf_yasg.py
